--- a/style.css
+++ b/style.css
@@ -12,28 +12,34 @@ div {
 h1, .alert-text{
     color: red;
 }
+
 img{
     display: flex;
     margin-bottom: 20px;
 }
+
 p{
     font-size: 16px;
 }
+
 .inline{
     display:flexbox;
 }
+
 .ingredients, .instructions{
     text-align: center;
     padding-right: 12px;
     border: 2px solid black;
     background-color: beige;
-    
+    border-radius: 7px;
 }
 
 .button{
     font-size: 18px;
     border: 1px solid blue;
+    border-radius: 7px;
     margin: 0 auto;
     width: 50px;
     display: block;
+    text-align: center;
 }
